<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_notes_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
            ​
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/activity_notes_collapse"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
                app:layout_scrollFlags="scroll|snap"
                >
                ​
                <ImageView
                    android:id="@+id/activity_notes_top_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/london_flat"
                    app:layout_collapseMode="parallax"
                    />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
            ​​
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_notes_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                style="@style/ToolBarWithNavigationBack"
                />
            ​
            <LinearLayout
                android:id="@+id/activity_notes_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:gravity="center"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                >
                ​
                <TextView
                    android:id="@+id/activity_notes_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:text="@string/app_name"
                    android:textSize="15sp"
                    />
                ​
                <TextView
                    android:id="@+id/activity_notes_region"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:text="@string/empty_team"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/activity_notes_medications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
            ​
            <LinearLayout
                android:id="@+id/materialup.tabs"
                android:layout_width="fill_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/activity_notes_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
        ​
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_notes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_notes_no_data_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/activity_notes_no_data_view"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_baseline_cloud_off_24"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/empty_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_notes_no_data_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        ​

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_notes_circle_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            app:layout_anchor="@id/activity_notes_container"
            android:elevation="8dp"
            app:layout_scrollFlags="scroll"
            app:layout_anchorGravity="top|center_horizontal"

            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.agrawalsuneet.dotsloader.loaders.LazyLoader
        android:id="@+id/activity_notes_dots_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:lazyloader_dotsDist="10dp"
        android:visibility="invisible"
        app:lazyloader_dotsRadius="5dp"
        app:lazyloader_firstDelayDur="150"
        app:lazyloader_firstDotColor="@android:color/holo_red_dark"
        app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
        app:lazyloader_secondDelayDur="300"
        app:lazyloader_secondDotColor="@color/colorPrimary"
        app:lazyloader_thirdDotColor="@color/yellow"/>
</RelativeLayout>



